spacing fix

--- a/src/style.css
+++ b/src/style.css
@@ -83,7 +83,7 @@ a {
   outline: none;
   display: block;
   margin: 0 auto;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .weather-forecast {
